# feedder-mcp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  中文指南.md
.github/workflows/: RSS+GMAIL.yml
doc/: 中文指南.md  测试结果.md
output/2026-02-24/: rss_exported_papers.json  rss_semantic_filtered_papers.json  rss_zotero_export.json
output/2026-02-25/: gmail_zotero_export.json  rss_zotero_export.json
output/2026-02-26/: gmail_fetched_papers.json  gmail_zotero_export.json  rss_exported_papers.json  rss_semantic_filtered_papers.json  rss_zotero_export.json
output/2026-03-01/: gmail_fetched_papers.json  gmail_zotero_export.json  rss_enriched_papers.json  rss_exported_papers.json  rss_semantic_filtered_papers.json  rss_zotero_export.json
src/: __init__.py  server.py
src/adapters/: __init__.py  json.py  zotero.py
src/client/: __init__.py  cli.py
src/config/: __init__.py  settings.py
src/handlers/: prompts.py  tools.py
src/models/: __init__.py  enums.py  responses.py  schemas.py
src/paper_feed/: __init__.py
src/paper_feed/adapters/: __init__.py  json.py  (+1 more)
src/services/: __init__.py  enrich.py  fetch.py
src/sources/: crossref.py  gmail.py  gmail_parser.py  openalex.py  opml.py  rss.py  rss_parser.py
src/utils/: __init__.py  dedup.py  errors.py  text.py
tests/unit/: test_adapters.py  test_ai.py  test_cli.py  test_config.py  test_crossref.py  test_dedup_utils.py  test_enrich_service.py  test_filters.py  test_gmail_parser.py  test_gmail_source.py  test_openalex.py  test_pipeline_ai.py  test_rss_source.py  test_tool_handler.py
(+20 files in other folders)
