[project]
name = "paper-feed"
version = "1.0.0"
description = "Academic paper collection from RSS and Gmail alerts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "python-dateutil>=2.8.0",
    "beautifulsoup4>=4.12.0",
    "ezgmail>=0.1.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
zotero = [
    # "zotero-core>=1.0.0",  # TODO: Will be implemented in Phase 2
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
paper-feed = "paper_feed.core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paper_feed"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ty>=0.0.15",
]
